--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "ejs": "^2.3.1",
     "body-parser": "~1.12.0",
     "cheerio": "^0.19.0",
     "cookie-parser": "~1.3.4",
